# models/productsModel.js
@@ -2,50 +2,45 @@
 import mongoose from "mongoose";
 
 const ProductSchema = new mongoose.Schema({
-  farmerId: {
-    type: mongoose.Schema.Types.ObjectId,
-    ref: 'User',
-    required: false,
-  },
+  // farmerId: {
+  //   type: mongoose.Schema.Types.ObjectId,
+  //   ref: 'User',
+  //   required: false,
+  // },
   productName: {
     type: String,
-    required: true,
+    required: false,
   },
   description: {
     type: String,
-    required: true,
+    required: false,
   },
   price: {
     type: Number,
-    required: true,
+    required: false,
   },
-  productInStock:{
-    type:Number,
-    required:true
-},
+//   productInStock:{
+//     type:Number,
+//     required:false
+// },
   category:{
     type: String,
     required:false,
-    enums:['Vegetables,Fruits']
+    // enums:[',Fruits']Vegetables
   },
-  image: {
-    public_id: {
-      type: String,
-    },
-    asset_id:{
-      type: String,
-    },
-    url:{
-      type: String,
-    }
-  },
-  updatedAt: {
-    type: Date,
-    default: Date.now
-  },
-  isExpired: Boolean,
-  isFeatured: Boolean,
-  featureEndDate: Date
+  // image: {
+  //   public_id: {
+  //     type: String,
+  //   },
+  //   asset_id:{
+  //     type: String,
+  //   },
+  //   url:{
+  //     type: String,
+  //   },
+  // },
+ 
+ 
 }, {
   timestamps: true
 }
